# surgebar

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/screenshots/: README.md
scripts/: com.surgebar.app.plist  com.talvinder.surgebar.plist
src/surgebar/: __init__.py  __main__.py  app.py  config.py  diagnose.py  process_naming.py  signals.py
