[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "surgebar"
version = "0.1.0"
description = "macOS menu bar CPU surge alerts with one-click triage powered by Claude."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Talvinder Singh" }]
keywords = ["macos", "menu-bar", "cpu", "monitoring", "claude", "anthropic", "rumps"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "psutil>=5.9",
    "rumps>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/talvinder/surgebar"
Repository = "https://github.com/talvinder/surgebar"
Issues = "https://github.com/talvinder/surgebar/issues"
Changelog = "https://github.com/talvinder/surgebar/blob/main/CHANGELOG.md"

[project.scripts]
surgebar = "surgebar.__main__:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "build>=1.2",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/scripts",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/surgebar"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]
